--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "humps": "^2.0.1",
+    "immer": "^10.0.4",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.3",
@@ -44,12 +47,15 @@
     "react-native-paper": "^5.12.3",
     "react-native-paper-form-builder": "^2.1.2",
     "react-native-reanimated": "~3.6.2",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "zustand": "^4.5.2",
+    "zustand-persist": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
