--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-community/netinfo": "11.1.0",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.6.3",
