--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@shopify/flash-list": "1.6.3",
     "@supabase/supabase-js": "^2.42.3",
     "expo": "~50.0.14",
+    "expo-auth-session": "~5.4.0",
     "expo-camera": "~14.1.2",
     "expo-constants": "~15.4.5",
+    "expo-crypto": "~12.8.1",
     "expo-device": "~5.9.3",
     "expo-font": "~11.10.3",
     "expo-image-manipulator": "~11.8.0",
