--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.5",
     "expo-router": "~3.5.23",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
